--- a/todo/tasks/templates/tasks/list.html
+++ b/todo/tasks/templates/tasks/list.html
@@ -1,74 +1,59 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
 
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+    <title>TODO </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<style>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+</head>
 
-	body{
-		background-color: #638CB8;
-	}
+<body>
 
-	input{
-		width: 100%;
-		padding: 12px 20px;
-		margin: 8px 0;
-		box-sizing: border-box;
-	}
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="{% static '/images/b.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+    TODO App
+  </a>
+</nav>
+    <div class="center-column boxbody">
 
-	input::placeholder {
-	  color: #d3d3d3;
-	}
+        <form method="POST" action="/" >
+            {% csrf_token %} {{form.title}}
+            <input class="btn btn-info submit" type="submit" name="Create Task" >
+        </form>
 
-	.submit{
-		background-color: #6BA3E8;
-	}
+        <div class="todo-list">
 
-	.center-column{
-		width:600px;
-		margin: 20px auto;
-		padding:20px;
-		background-color: #fff;
-		border-radius: 3px;
-		box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
-	}
+            {% for task in tasks %}
+            <div class="item-row">
+                <div class="dropdown">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle btn-info" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Update
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="{% url 'update_task' task.id %}">Change</a>
+                        <a class="dropdown-item" href="#" action = "{% task task.complete == True % }">Complete Task</a>
+                    </div>
 
-	.item-row{
-		background-color: #906abd;
-		margin: 10px;
-		padding: 20px;
-		border-radius: 3px;
-		color: #fff;
-		font-size: 16px;
-		box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
-	}
+                     <a class="btn btn-sm btn-delete " href="{% url 'delete_task' task.id %}">Delete</a>
+                    {% if task.complete == True %}
+                		<strike>{{task}}</strike> 
+                	{% else %}
+                		<span>{{task}}</span> 
+                	{% endif %}
+                </div>
 
-	.btn-danger{
-		background-color: #ffae19;
-		border-color: #e59400;
-	}
+               <!--  <a class="btn btn-sm btn-info" href="{% url 'update_task' task.id %}">Update</a> -->
+                
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-</style>
-
-<div class="center-column">
-
-	<form method="POST" action="/">
-		{% csrf_token %}
-		{{form.title}}
-		<input class="btn btn-info" type="submit" name="Create Task">
-	</form>
-
-	<div class="todo-list">
-
-	{% for task in tasks %}
-		<div class="item-row">
-			<a class="btn btn-sm btn-info" href="{% url 'update_task' task.id %}">Update</a>
-			<a class="btn btn-sm btn-danger" href="{% url 'delete_task' task.id %}">Delete</a>
-
-			{% if task.complete == True %}
-			<strike>{{task}}</strike>
-			{% else %}
-			<span>{{task}}</span>
-			{% endif %}
-		</div>
-	{% endfor %}
-	</div>
-</div>
+</html>
