--- a/todo/tasks/templates/tasks/navbar.html
+++ b/todo/tasks/templates/tasks/navbar.html
@@ -1,7 +1,11 @@
+
+
 {% load static %}
-<nav class="navbar navbar-light bg-light">
+
+
+<nav class="navbar navbar-dark bg-dark navbar-color">
   <a class="navbar-brand" href="#">
-    <img src="{% static '/images/b.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+
     TODO App
   </a>
 </nav>
